data/datasets/spec_bug_fix_kics/aws/kics_aws_dynamodb_vpc_endpoint_without_route_table_association_001/patch.tf
provider "aws" { region = "us-east-1" }

locals { s3_prefix_list_cidr_block = "3.218.183.128/25" }
resource "aws_vpc" "main" { cidr_block = "192.168.100.0/24" enable_dns_support = true }

resource "aws_subnet" "private-subnet" { vpc_id = aws_vpc.main.id cidr_block = "192.168.100.128/25"
tags = { Name = "private-subnet" } }

resource "aws_route_table" "private-rtb" { vpc_id = aws_vpc.main.id tags = { Name = "private-rtb" } }

resource "aws_vpc_endpoint" "dynamodb-vpce-gw" { vpc_id = aws_vpc.main.id service_name = "com.amazonaws.us-east-1.dynamodb"
route_table_ids = [aws_route_table.private-rtb.id] }

resource "aws_security_group" "allow-public-outbound-sg" { name = "allow-public-outbound-sg" description = "Allow HTTPS outbound traffic" vpc_id = aws_vpc.main.id
going = true }

data "aws_ami" "ubuntu" { most_recent = true filter { name = "name" values = ["ubuntu/images/hvm-ssd/ubuntu-xenial-16.04-amd64-server-*"] } filter { name = "virtualization-type" values = ["hvm"] } owners = ["099720109477"] # Canonical }

resource "aws_instance" "test" { ami = data.aws_ami.ubuntu.id instance_type = "t2.micro" vpc_security_group_ids = [aws_security_group.allow-public-outbound-sg.id] subnet_id = aws_subnet.private-subnet.id }

resource "aws_dynamodb_table" "basic-dynamodb-table" { name = "GameScores" billing_mode = "PROVISIONED" read_capacity = 5 write_capacity = 5 hash_key = "UserId" range_key = "GameTitle"
attribute { name = "UserId" type = "S" } attribute { name = "GameTitle" type = "S" } }
